
[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "zotero_library_utils"
version = '0.1.0'
description = 'Tools to locally analyze a Zotero library.'
authors = [{name = "Mitchell Tillman", email ="mtillman14@gmail.com"}]
dependencies = [
    "typer",
    "matplotlib"
]

# [tool.hatch.build.targets.wheel]
# include = ["src/"]

# [tool.hatch.build.targets.sdist]
# include = ["src/"]